[project]
name = "ascend-ground-radio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "hypercorn>=0.17.3",
    "peewee>=3.18.2",
    "pydantic>=2.11.9",
    "sse-starlette",
    "starlette",
    "uvicorn",
]
